fix(slider): vertical align label and value

--- a/components/slider/index.css
+++ b/components/slider/index.css
@@ -27,7 +27,6 @@ governing permissions and limitations under the License.
   --spectrum-slider-handle-border-radius: var(--spectrum-corner-radius-200);
   --spectrum-slider-handle-border-width-down: var(--spectrum-slider-handle-border-width-down-small);
   --spectrum-slider-label-top-to-text: var(--spectrum-component-top-to-text-75);
-  --spectrum-slider-control-to-field-label: var(--spectrum-slider-control-to-field-label-small);
 }
 
 .spectrum-Slider--sizeM {
@@ -37,7 +36,6 @@ governing permissions and limitations under the License.
   --spectrum-slider-handle-border-radius: var(--spectrum-corner-radius-200);
   --spectrum-slider-handle-border-width-down: var(--spectrum-slider-handle-border-width-down-medium);
   --spectrum-slider-label-top-to-text: var(--spectrum-component-top-to-text-75);
-  --spectrum-slider-control-to-field-label: var(--spectrum-slider-control-to-field-label-medium);
 
 }
 
@@ -48,7 +46,6 @@ governing permissions and limitations under the License.
   --spectrum-slider-handle-border-radius: calc(var(--spectrum-corner-radius-200) * 4);
   --spectrum-slider-handle-border-width-down: var(--spectrum-slider-handle-border-width-down-large);
   --spectrum-slider-label-top-to-text: var(--spectrum-component-top-to-text-100);
-  --spectrum-slider-control-to-field-label: var(--spectrum-slider-control-to-field-label-large);
 }
 
 .spectrum-Slider--sizeXL {
@@ -58,8 +55,6 @@ governing permissions and limitations under the License.
   --spectrum-slider-handle-border-radius: calc(var(--spectrum-corner-radius-200) * 4);
   --spectrum-slider-handle-border-width-down: var(--spectrum-slider-handle-border-width-down-extra-large);
   --spectrum-slider-label-top-to-text: var(--spectrum-component-top-to-text-200);
-  --spectrum-slider-control-to-field-label: var(--spectrum-slider-control-to-field-label-extra-large);
-
 }
 
 .spectrum-Slider {
@@ -344,6 +339,7 @@ governing permissions and limitations under the License.
 
 .spectrum-Slider-labelContainer {
   display: flex;
+  align-items: center;
   position: relative;
   inline-size: auto;
 
@@ -351,8 +347,6 @@ governing permissions and limitations under the License.
   line-height: var(--mod-line-height-100, var(--spectrum-line-height-100));
 
   margin-block-start: var(--mod-slider-label-top-to-text, var(--spectrum-slider-label-top-to-text));
-  margin-block-end: calc(-1 * var(--mod-slider-control-to-field-label, var(--spectrum-slider-control-to-field-label)));
-
 
   /* international support */
   &:lang(ja),
@@ -364,7 +358,7 @@ governing permissions and limitations under the License.
 
 .spectrum-Slider-label {
   padding-inline-start: 0;
-  padding-block-start: 0;
+  padding-block: 0;
   flex-grow: 1;
   font-size: var(--mod-slider-font-size, var(--spectrum-slider-font-size));
 }
